--- a/gb-thymeleaf-winter/src/main/resources/templates/navbar.html
+++ b/gb-thymeleaf-winter/src/main/resources/templates/navbar.html
@@ -21,6 +21,11 @@
                 <li class="nav-item" sec:authorize="hasAnyAuthority('product.create', 'product.update')">
                     <a class="nav-link" th:classappend="${activeTab == 'ProductForm' ? 'active' : ''}" th:href="@{/product}">Добавить продукт</a>
                 </li>
+
+                <li class="nav-item" sec:authorize="hasAnyAuthority('cart.add')">
+                    <a class="nav-link" th:classappend="${activeTab == 'Cart' ? 'active' : ''}" th:href="@{/product/cart}">Корзина</a>
+                </li>
+
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" method="post">
                         <input type="submit" class="btn btn-danger" value="Выйти">
